tools/fixCoords/tool.css
body.lichessTools.lichessTools-fixCoords-larger cg-container coords {
  font-size: 1.3em;
}

body.lichessTools.lichessTools-fixCoords-larger.coords-out:not(.mobile,:has(.lpv__board)) cg-container coords.ranks {
  right: -0.8em;
}

body.lichessTools.lichessTools-fixCoords-larger.coords-out:not(.mobile,:has(.lpv__board)) cg-container coords.files {
  bottom: -1.3em;
}

@media (min-width: 1259.3px) {
  body.lichessTools.lichessTools-fixCoords-fix.coords-out:not(.mobile,:has(.lpv__board)) main.gauge-on div.analyse__board {
    left: -1.2em;
  }
}

body.lichessTools.lichessTools-fixCoords-fix.coords-out:not(.mobile,:has(.lpv__board)) div.study__player-bot {
  margin-top: 1.5em;
}

body.lichessTools.lichessTools-fixCoords-fix.coords-out:not(.mobile,:has(.lpv__board)) div.analyse__board {
  margin-bottom: 1.5em;
}

coords.lichessTools-fixCoords {
  display: none;
}

body.lichessTools.lichessTools-fixCoords-square cg-container coords.lichessTools-fixCoords {
  display: block;
  opacity: 1;
  width: 100%;
  height: 100%;
  filter: brightness(1.25);
}

body.lichessTools.lichessTools-fixCoords-square cg-container coords.lichessTools-fixCoords>coord {
  position: absolute;
  top: calc(12.5% * (9 - var(--rank)) - 1.2em);
  left: calc(12.5% * var(--file) - 1.2em);
  color: white;
  z-index: 2;
  text-shadow: 1px 1px black;
  pointer-events: none;
  opacity: calc(var(---board-opacity) / 100);
  font-size: max(8px, calc(var(---cg-width) / 50));
  font-weight: lighter;
}

body.lichessTools.lichessTools-fixCoords-square cg-container coords.lichessTools-fixCoords>coord.light {
  color: var(---cg-ccb);
}

body.lichessTools.lichessTools-fixCoords-square cg-container coords.lichessTools-fixCoords>coord.dark {
  color: var(---cg-ccw);
}

body.lichessTools.lichessTools-fixCoords-square .orientation-black cg-container coords.lichessTools-fixCoords>coord {
  top: calc(12.5% * var(--rank) - 1.2em);
  left: calc(12.5% * (9 - var(--file)) - 1.2em);
}

body.lichessTools.lichessTools-fixCoords-square.lichessTools-fixCoords-larger cg-container coords.lichessTools-fixCoords>coord {
  font-size: max(10px, calc(var(---cg-width) / 40));
}

body.lichessTools.lichessTools-fixCoords-square cg-container coords.ranks,
body.lichessTools.lichessTools-fixCoords-square cg-container coords.files {
  display: none;
}

/* Prettier Lichess CSS */

body.lichessTools.lichessTools-prettier.lichessTools-fixCoords-larger cg-container coords {
  font-size: 1.3em !important;
}

body.lichessTools.lichessTools-prettier.lichessTools-fixCoords-larger.coords-out:not(.mobile,:has(.lpv__board)) cg-container coords.files {
  bottom: -1.3em !important;
}

@media (min-width: 1259.3px) {
  body.lichessTools.lichessTools-prettier.lichessTools-fixCoords-fix.coords-out:not(.mobile,:has(.lpv__board)) main.gauge-on div.analyse__board {
    left: -0.6em;
  }
}

body.lichessTools.lichessTools-prettier.lichessTools-fixCoords-fix.coords-out:not(.mobile,:has(.lpv__board)) div.study__player-bot {
  margin-top: 1em !important;
}

body.lichessTools.lichessTools-prettier.lichessTools-fixCoords-fix.coords-out coords.files {
  bottom: 0 !important;
}

body.lichessTools.lichessTools-prettier.lichessTools-fixCoords-fix.coords-out coords.ranks {
  right: 0 !important;
}

